--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id="box3" class="box"><a href="http://bit.ly/2YxWsLv" target="blank">Apply Online</a>
         </div>
         <div id="box4" class="box">
-            <a href="https://zpnilgavhan.github.io/edu/flexM.html/">मराठीत बघा
+            <a href="https://zpnilgavhan.github.io/edu/flexM.html">मराठीत बघा
             </a>
         </div>
     </div>
