--- a/flexM.html
+++ b/flexM.html
@@ -91,7 +91,7 @@
 <body>
     <div class="container">
         <div id="box2" class="box">
-            <a href="https://zpnilgavhan.github.io/edu/contactM.html/">संपर्क करा
+            <a href="https://zpnilgavhan.github.io/edu/contactM.html">संपर्क करा
             </a>
         </div>
         <div id="box3" class="box">
@@ -100,7 +100,7 @@
             
         </div>
         <div id="box4" class="box">
-            <a href="https://zpnilgavhan.github.io/edu/index.html/">View in English
+            <a href="https://zpnilgavhan.github.io/edu/index.html">View in English
             </a>
         </div>
     </div>
