--- a/resultstdwise.html
+++ b/resultstdwise.html
@@ -17,7 +17,8 @@
         <div id="wrapper">
             <div class="biodata">
                 <h1>निकाल</h1>
-                <h2>जि प शाळा निळगव्हाण (Udise No. 27020206701)</h2>
+                <h2>जि प शाळा निळगव्हाण</h2>
+                <h2>Udise No. 27020206701</h2>
                 <div class="std">
                     <h1><a href="https://zpnilgavhan.github.io/edu/result1.html">इयत्ता - पहिली</a></h1>
                 </div>
