--- a/contactM.html
+++ b/contactM.html
@@ -122,12 +122,12 @@
 </head>
 <body>
     <div class="container">
-        <div id="box1" class="box"><a href="https://zpnilgavhan.github.io/homeM/">होम</a>
+        <div id="box1" class="box"><a href="https://zpnilgavhan.github.io/edu/index.html">होम</a>
         </div>
         <div id="box3" class="box"><a href="http://bit.ly/2YxWsLv" target="blank">अर्ज करा</a>
         </div>
         <div id="box4" class="box">
-            <a href="https://zpnilgavhan.github.io/contact.io/">View In English
+            <a href="https://zpnilgavhan.github.io/edu/contact.html">View In English
             </a>
         </div>
     </div>
