--- a/result1.html
+++ b/result1.html
@@ -21,17 +21,24 @@
                 <h2>Udise No. 27020206701</h2>
                 <h2>इयत्ता-पहिली</h2>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/resultdemo.html">101</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/101.html">101</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="#">102</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/102.html">102</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="#">103</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/103.html">103</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="#">104</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/104.html">104</a></h1>
                 </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/105.html">105</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/106.html">106</a></h1>
+                </div>
+                
             </div>
             
            </div>
