--- a/result1.html
+++ b/result1.html
@@ -21,22 +21,46 @@
                 <h2>Udise No. 27020206701</h2>
                 <h2>इयत्ता-पहिली</h2>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/101.html">101</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/101.html">कुणाल</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/102.html">102</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/102.html">ओम</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/103.html">103</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/103.html">लखन</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/104.html">104</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/104.html">ओम</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/105.html">105</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/105.html">मनोहर</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/106.html">106</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/106.html">गणेश</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/107.html">रक्षा</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/108.html">शालिनी</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/109.html">दिव्या</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/110.html">योगीता</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/111.html">विद्या</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/112.html">नयना</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/113.html">शितल</a></h1>
+                </div>
+                <div class="std">
+                    <h1><a href="https://zpnilgavhan.github.io/edu/114.html">सोनल</a></h1>
                 </div>
                 
             </div>
@@ -172,7 +196,7 @@
                 border: solid black 2px;
                 border-radius: 12vh;
                 width:40vh ;
-                padding: 5px 0;
+                padding: 3px 0;
         }
 
         #keywords {
