--- a/102.html
+++ b/102.html
@@ -16,7 +16,7 @@
     <div class="bx">
         <div id="wrapper">
             <div class="biodata">
-                <h1 class="redt">निकाल</h1>
+                <h1 class="redt">निकालपत्रक</h1>
                 <h2 class="redt">जि.प.शाळा निळगव्हाण<h4>(27020206701)</h4></h2>
                 <h2 class="redt">इयत्ता - पहिली</h2>
                 <h2 class="bluet">ओम कारभारी मोरे</h2>
