--- a/result1.html
+++ b/result1.html
@@ -21,46 +21,46 @@
                 <h2>Udise No. 27020206701</h2>
                 <h2>इयत्ता-पहिली</h2>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/101.html">1.कुणाल</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/101.html">1-कुणाल</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/102.html">2.ओम</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/102.html">2-ओम</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/103.html">3.लखन</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/103.html">3-लखन</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/104.html">4.ओम</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/104.html">4-ओम</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/105.html">5.मनोहर</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/105.html">5-मनोहर</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/106.html">6.गणेश</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/106.html">6-गणेश</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/107.html">7.रक्षा</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/107.html">7-रक्षा</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/108.html">8.शालिनी</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/108.html">8-शालिनी</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/109.html">9.दिव्या</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/109.html">9-दिव्या</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/110.html">10.योगीता</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/110.html">10-योगीता</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/111.html">11.विद्या</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/111.html">11-विद्या</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/112.html">12.नयना</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/112.html">12-नयना</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/113.html">13.शितल</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/113.html">13-शितल</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/114.html">14.सोनल</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/114.html">14-सोनल</a></h1>
                 </div>
                 
             </div>
