--- a/resultstdwise.html
+++ b/resultstdwise.html
@@ -23,7 +23,7 @@
                     <h1><a href="https://zpnilgavhan.github.io/edu/result1.html">इयत्ता-पहिली</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="#">इयत्ता - दुसरी</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/result2.html">इयत्ता - दुसरी</a></h1>
                 </div>
                 <div class="std">
                     <h1><a href="#">इयत्ता - तिसरी</a></h1>
