--- a/resultstdwise.html
+++ b/resultstdwise.html
@@ -26,13 +26,13 @@
                     <h1><a href="https://zpnilgavhan.github.io/edu/result2.html">इयत्ता - दुसरी</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="#">इयत्ता - तिसरी</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/result3.html">इयत्ता - तिसरी</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="#">इयत्ता - चौथी</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/result4.html">इयत्ता - चौथी</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="#">इयत्ता - पाचवी</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/result5.html">इयत्ता - पाचवी</a></h1>
                 </div>
             </div>
             
