--- a/contactM.html
+++ b/contactM.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Amita:wght@700&family=Gotu&display=swap" rel="stylesheet">
     <style>
         html{
@@ -41,7 +41,7 @@
             display: flex;
             flex-wrap: wrap;
             width: 95%;
-
+            height: auto;
             margin: auto;
             padding-top: 1rem;
             padding-bottom: 1rem;
@@ -49,7 +49,7 @@
             justify-content: center;
             justify-content: space-around;
             align-items: center;
-            /* overflow: hidden; */
+            overflow: hidden;
            
         }
         .box{
@@ -128,11 +128,18 @@
             background-color: blueviolet;
             padding: 1%;
         }
+        .mail{
+            text-align: center;
+            width: max-content;
+            color: black;
+            border: solid 2px rgb(78, 3, 47);
+            border-radius: 25px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div id="box1" class="box"><a href="https://zpnilgavhan.github.io/homeM">होम</a>
+        <div id="box1" class="box"><a href="https://zpnilgavhan.github.io/edu/index.html">होम</a>
         </div>
         <div id="box3" class="box"><a href="http://bit.ly/2YxWsLv" target="blank">ऑनलाईन प्रवेश</a>
         </div>
@@ -194,20 +201,8 @@
                 <div class="facname">
                     9637520763
                 </div>
-            </div>
         </div>
-        <div class="rowobject">
-            <div class="object">
-                <div class="facname">
-                    आम्हाला मेल करा : 
-                </div>
-                <div class="facname">
-                   zpnilgavhan123@gmail.com
-                </div>
-            </div>
-
         </div>
-        
     </div>
     <a href="#">
         <div class="xen">
