--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             display: flex;
             flex-wrap: wrap;
             width: 95%;
-
+            height: auto;
             margin: auto;
             padding-top: 1rem;
             padding-bottom: 1rem;
@@ -49,7 +49,7 @@
             justify-content: center;
             justify-content: space-around;
             align-items: center;
-            /* overflow: hidden; */
+            overflow: hidden;
            
         }
         .box{
@@ -128,11 +128,18 @@
             background-color: blueviolet;
             padding: 1%;
         }
+        .mail{
+            text-align: center;
+            width: max-content;
+            color: black;
+            border: solid 2px rgb(78, 3, 47);
+            border-radius: 25px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div id="box1" class="box"><a href="https://zpnilgavhan.github.io/home">Home</a>
+        <div id="box1" class="box"><a href="https://zpnilgavhan.github.io/edu/index.html">Home</a>
         </div>
         <div id="box3" class="box"><a href="http://bit.ly/2YxWsLv" target="blank">Online Admission</a>
         </div>
@@ -146,7 +153,7 @@
         <div class="rowobject">
             <div class="object">
                 <h2>
-                    शिक्षक वृंद
+                    Staff
                 </h2>
             </div>
         </div>
@@ -156,10 +163,10 @@
                         <img src="https://zpnilgavhan.github.io/edu/satishMarathe.jpg" class="fac">
                     </div>
                     <div class="facname">
-                        सतीश मराठे
+                        Satish Marathe
                     </div>
                     <div class="facname">
-                        मुख्याध्यापक
+                        Head-Master
                     </div>
                     <div class="facname">
                         7588318164
@@ -172,10 +179,13 @@
                         <img src="https://zpnilgavhan.github.io/edu/shashi1.jpg" class="fac">
                     </div>
                     <div class="facname">
-                        शशिकांत बच्छाव
+                        Shashikant
                     </div>
                     <div class="facname">
-                        उपशिक्षक
+                        Bachchhav
+                    </div>
+                    <div class="facname">
+                        Asst.Teacher
                     </div>
                     <div class="facname">
                         7620132520
@@ -186,28 +196,19 @@
                     <img src="https://zpnilgavhan.github.io/edu/sabale1.jpg" class="fac">
                 </div>
                 <div class="facname">
-                    जगदीश साबळे
+                    Jagdish
                 </div>
                 <div class="facname">
-                    उपशिक्षक
+                    Sabale
+                </div>
+                <div class="facname">
+                    Asst.Teacher
                 </div>
                 <div class="facname">
                     9637520763
                 </div>
-            </div>
         </div>
-        <div class="rowobject">
-            <div class="object">
-                <div class="facname">
-                    आम्हाला मेल करा : 
-                </div>
-                <div class="facname">
-                   zpnilgavhan123@gmail.com
-                </div>
-            </div>
-
         </div>
-        
     </div>
     <a href="#">
         <div class="xen">
