--- a/501.html
+++ b/501.html
@@ -82,10 +82,12 @@
 
 </html>
 
+
 <style> 
             html{
                 font-size: small;
                 font-family: 'Gotu', sans-serif,'Amita', cursive;
+                user-select: none;
             }
             body {
                 /* Set a background color that will be displayed
@@ -100,7 +102,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 width: 95%;
-                height: 100vh;
+                height: auto;
                 margin: auto;
                 padding-top: 1rem;
                 padding-bottom: 1rem;
@@ -122,9 +124,6 @@
             a:hover{
                 color: rgb(62, 236, 9);
                 zoom: 110%;
-            }
-            span:hover{
-                color: rgb(62, 236, 9);
             }
             .ima1{
                 display: flex;
