--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             position: fixed;
             margin : auto;
             width: 40vh;
-            bottom: 22%;
-            right: 8%;
+            bottom: 22vh;
+            right: 4vh;
             zoom: 1;
             text-align: center;
             font-weight: 500;
