--- a/flexM.html
+++ b/flexM.html
@@ -137,7 +137,7 @@
         <div id="box3" class="box"><a href="http://bit.ly/2YxWsLv" target="blank">ऑनलाईन प्रवेश</a>
         </div>
         <div id="box4" class="box">
-            <a href="https://zpnilgavhan.github.io/edu/flex.html">View In English
+            <a href="https://zpnilgavhan.github.io/edu/index.html">View In English
             </a>
         </div>
         
