--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         }
         .welcome{
             font-size: large;
-            margin-top: 10%;
+            margin-top: 3px;
             
         }
     </style>
