--- a/a102.html
+++ b/a102.html
@@ -135,7 +135,7 @@
         <h2 class="redt">जि.प.शाळा निळगव्हाण<h4 class="redt">(27020206701)</h4></h2>
         <h2 >इयत्ता - पहिली</h2>
         <h2 >ओम कारभारी मोरे</h2> 
-        <h2 >हजर दिवस : <span class = "redt"></span></h2>
+        <h2 >हजर दिवस : <span class = "redt">182</span></h2>
         <h2 >कामाचे दिवस : <span class = "redt">193</span></h2> 
     </div>
                 
