--- a/a212.html
+++ b/a212.html
@@ -93,14 +93,14 @@
             /* float: right; */
             position: fixed;
             margin : auto;
-            bottom: 30%;
-            right: 10%;
+            bottom: 22%;
+            right: 15%;
             zoom: 1;
             text-align: center;
             font-weight: 500;
             border: solid black 2vh;
             border-radius: 25px;
-            padding : 2px;
+            padding : 3px;
         }
        .xen{
             /* float: right; */
@@ -121,17 +121,19 @@
 </head>
 <body>
     <div class="container">
-        <div id="box2" class="box"><a href="https://zpnilgavhan.github.io/edu/contact.html">Contact Us</a>
-        </div>
-        <div id="box3" class="box"><a href="http://bit.ly/2YxWsLv" target="blank">Apply Online</a>
-        </div>
         <div id="box4" class="box">
-            <a href="https://zpnilgavhan.github.io/edu/flexM.html">मराठीत बघा
-            </a>
+            <a href="https://zpnilgavhan.github.io/edu/flexM.html">होम
+                </a>
         </div>
+        <div id="box2" class="box"><a href="https://zpnilgavhan.github.io/edu/contactM.html">संपर्क</a>
+        </div>
+        <div id="box3" class="box"><a href="http://bit.ly/2YxWsLv" target="blank">ऑनलाईन प्रवेश</a>
+        </div>
+        
     </div>
     <div class="xen2">
-        <h2 >इयत्ता - पहिली</h2>
+        <h2 class="redt">जि.प.शाळा निळगव्हाण<h4 class="redt">(27020206701)</h4></h2>
+        <h2 >इयत्ता - दुसरी</h2>
         <h2 >आश्विनी बाबाजी माळीच</h2> 
         <h2 >हजर दिवस : <span class = "redt">181</span></h2>
         <h2 >कामाचे दिवस : <span class = "redt">193</span></h2> 
