--- a/a201.html
+++ b/a201.html
@@ -133,7 +133,7 @@
     </div>
     <div class="xen2">
         <h2 class="redt">जि.प.शाळा निळगव्हाण<h4 class="redt">(27020206701)</h4></h2>
-        <h2 >इयत्ता - पहिली</h2>
+        <h2 >इयत्ता - दुसरी</h2>
         <h2 >दर्शन शिवाजी मोरे</h2> 
         <h2 >हजर दिवस : <span class = "redt">191</span></h2>
         <h2 >कामाचे दिवस : <span class = "redt">193</span></h2> 
