--- a/407.html
+++ b/407.html
@@ -95,7 +95,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 width: 95%;
-                height: auto;
+                height: 100vh;
                 margin: auto;
                 padding-top: 1rem;
                 padding-bottom: 1rem;
