--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
             margin : auto;
             width: 40vh;
             bottom: 22vh;
-            right: 4vh;
+            /* right: 4vh; */
+            right: 20%;
             zoom: 1;
             text-align: center;
             font-weight: 500;
@@ -154,6 +155,9 @@
         </div>
         <div class="task">
             <a href="https://zpnilgavhan.github.io/edu/attendancestdwise.html"><h2>View Attendance</h2></a>
+        </div>
+        <div class="task">
+            <a href="https://zpnilgavhan.github.io/edu/flex.html"><h2>Check School</br>School Committee</h2></a>
         </div>
     </div>
                 
