--- a/flexM.html
+++ b/flexM.html
@@ -155,6 +155,9 @@
         <div class="task">
             <a href="https://zpnilgavhan.github.io/edu/attendancestdwise.html"><h2>हजेरी पाहा</h2></a>
         </div>
+        <div class="task">
+            <a href="https://zpnilgavhan.github.io/edu/flex.html"><h2>शाळा व्यवस्थापन </br>समिती पाहा</h2></a>
+        </div>
     </div>
                 
     <!-- <div class="recent">
