--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         </div>
     </div>
    <div class="xen2">
-        <h3>Welcome to ZP Nilgavhan</h3>
+        <h3> Z.P.School Nilgavhan</h3>
+        <h3>Welcomes you !!</h3>
    </div>
     <div class="recent1">
             <div class="task">
