--- a/result5.html
+++ b/result5.html
@@ -27,7 +27,7 @@
                     <h1><a href="https://zpnilgavhan.github.io/edu/502.html">वैभव</a></h1>
                 </div>
                 <div class="std">
-                    <h1><a href="https://zpnilgavhan.github.io/edu/503.html">प्रेम</a></h1>
+                    <h1><a href="https://zpnilgavhan.github.io/edu/prem.html">प्रेम</a></h1>
                 </div>
                 <div class="std">
                     <h1><a href="https://zpnilgavhan.github.io/edu/504.html">अभय</a></h1>
