--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <a href="https://zpnilgavhan.github.io/edu/attendancestdwise.html"><h2>Check Attendance</h2></a>
             </div>
             <div class="task">
-                <a href="https://zpnilgavhan.github.io/edu/flex.html"><h2>Check School</br>School Committee</h2></a>
+                <a href="https://zpnilgavhan.github.io/edu/committee.html"><h2>Check School</br>School Committee</h2></a>
             </div>
     </div>
 </div>
